Removed unused natures and fixed deprecated constructors.